quick fix for text clipping in some areas

--- a/css/aboutMeArticle.css
+++ b/css/aboutMeArticle.css
@@ -33,6 +33,8 @@
     font-size: min(8vw, 128px);
     font-weight: 900;
     font-style: italic;
+    padding-left: 10px;
+    padding-right: 10px;
     margin: 0;
     z-index: 0;
 }
