--- a/css/mainArticle.css
+++ b/css/mainArticle.css
@@ -32,6 +32,8 @@
     font-size: min(16vw, 128px);
     font-weight: 900;
     font-style: italic;
+    padding-left: 10px;
+    padding-right: 10px;
     margin: 0;
     z-index: 0;
 }
